# scrapeagent

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_skill.yml
.github/workflows/: ci.yml
scrapeagent/: __init__.py  agent.py  prompt.py  skills_loader.py
scrapeagent/.adk/: session.db
scrapeagent/skills/github-trending/: SKILL.md
scrapeagent/skills/hacker-news/: SKILL.md
scrapeagent/skills/skill-creator/: SKILL.md
scrapeagent/skills/skill-creator/assets/: SKILL_TEMPLATE.md
scrapeagent/tools/: __init__.py  file_tools.py
tests/: test_file_tools.py  test_skills_loader.py
